2005-07-26 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/QueryParser/LCQueryParser.m:
    A very simple implementation.
    * Source/QueryParser/LCIndexModifier.m:
    New class.
    * Source//LCIndexManager.m:
    Implement most of the methods.

2005-07-24 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Headers/LCIndexManager.h:
    * Headers/Importer/LCImporter.h:
    * Headers/QueryParser/LCQueryParser.h:
    * Headers/QueryParser/QueryParser.h:
    * Source/QueryParser/LCQueryParser.m:
    * Source/QueryParser/GNUmakefile:
    Add new classes.

2005-07-22 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCBooleanScorer.m:
    Chase Apache Lucene.

2005-07-15 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCFuzzyTermEnum.m:
    * Source/Search/TestFuzzyQuery.m:
    Pass all tests.
    * Change interfaces to be more like GNUstep.
    * Current test result: 
    Result: 40 classes, 101 methods, 50181 tests, 0 failed

2005-07-14 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Util/LCBitVector.m:
    * Source/Util/LCPriorityQueue.m:
    Disable unit test.
    * Source/Search/LCPrefixQuery.m:
    * Headers/Search/LCPrefixQuery.h:
    New subclass of LCQuery.
    * Source/Search/TestPrefixQuery.m:
    Test for LCPrefixQuery.
    * Source/Search/LCBooleanQuery.m:
    Bug fixed.
    * Source/Search/LCFilteredTermEnum.m:
    * Source/Search/LCMultiTermQuery.m:
    * Source/Search/LCFuzzyQuery.m:
    * Source/Search/LCFuzzyTermEnum.m:
    * Source/Search/TestFuzzyQuery.m:
    New classes and tests.

2005-07-12 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Analysis/LCPerFieldAnalyzerWrapper.m:
    add -description.

2005-07-07 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCQuery.m: fix warning.

2005-07-06 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCQuery.m: update -combine:.
    * Source/Index/LCSegmentInfos.m: update version.

2005-07-05 Yen-Ju Chen <yjchenx at gmail _dot_ com>
